# xsdata-plantuml

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: plantuml.yml  publish.yml  samples.yml  tests.yml
samples/: order.pu
tests/: test_generator.py
tests/formats/plantuml/: test_generator.py
xsdata_plantuml/: generator.py  hook.py
xsdata_plantuml/formats/plantuml/: generator.py
