[metadata]
name = xsdata_plantuml
version = 21.3
description = xsdata PlantUML generator
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/tefra/xsdata-plantuml
author = Christodoulos Tsoulloftas
author_email = "chris@komposta.net",
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Code Generators
    Topic :: Text Processing :: Markup :: UML
keywords = xsd,wsdl,schema,xml,uml,plantuml,generator,cli
project_urls =
    Source=https://github.com/tefra/xsdata-plantuml

[options]
packages = xsdata_plantuml
install_requires =
    xsdata[cli]@git+https://github.com/tefra/xsdata.git
python_requires = >=3.6
include_package_data = True

test =
    codecov
    pre-commit
    pytest
    pytest-cov
    tox


[options.entry_points]
xsdata.plugins.cli =
    xsdata_plantuml = xsdata_plantuml.hook


[flake8]
exclude = tests/*
max-line-length = 88
ignore = W503,ANN101,ANN102,E203

[doc8]
max-line-length = 88

[tool:pytest]
addopts = --color=yes
